@@ -27,10 +27,8 @@ import org.elasticsearch.plugins.Plugin;
 import org.elasticsearch.test.ESIntegTestCase;
 import org.elasticsearch.test.InternalTestCluster;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
 
 import static org.elasticsearch.cluster.metadata.SingleNodeShutdownMetadata.Status.COMPLETE;
@@ -44,7 +42,7 @@ public class NodeShutdownShardsIT extends ESIntegTestCase {
 
     @Override
     protected Collection<Class<? extends Plugin>> nodePlugins() {
-        return Arrays.asList(ShutdownPlugin.class);
+        return List.of(ShutdownPlugin.class);
     }
 
     /**
@@ -349,15 +347,15 @@ public class NodeShutdownShardsIT extends ESIntegTestCase {
         );
 
         final String nodeB = internalCluster().startNode();
+        assertBusy(() -> assertIndexSetting("myindex", "index.number_of_replicas", "1"));
         ensureGreen("myindex");
-        var assertion = new BackgroundAssertion(() -> assertIndexSetting("myindex", "index.number_of_replicas", "1"));
 
         putNodeShutdown(primaryNodeId, SingleNodeShutdownMetadata.Type.RESTART, null);
-
-        // RESTART did not reroute, neither should it when we no longer contract replicas, but we provoke it here in the test to ensure
-        // that auto-expansion has run.
+        // registering node shutdown entry does not perform reroute, neither should it.
+        // we provoke it here in the test to ensure that auto-expansion has run.
         updateIndexSettings(Settings.builder().put("index.routing.allocation.exclude.name", "non-existent"), "myindex");
 
+        assertBusy(() -> assertIndexSetting("myindex", "index.number_of_replicas", "1"));
         indexRandomData("myindex");
 
         internalCluster().restartNode(primaryNode, new InternalTestCluster.RestartCallback() {
@@ -369,7 +367,6 @@ public class NodeShutdownShardsIT extends ESIntegTestCase {
         });
 
         ensureGreen("myindex");
-        assertion.verify();
     }
 
     public void testAutoExpandDuringReplace() throws Exception {
@@ -377,25 +374,35 @@ public class NodeShutdownShardsIT extends ESIntegTestCase {
         var node1 = internalCluster().startNode();
         var node2 = internalCluster().startNode();
 
-        createIndex("index", indexSettings(1, 0).put("index.auto_expand_replicas", "0-1").build());
-        ensureGreen("index");
+        createIndex("index", indexSettings(1, 0).put("index.auto_expand_replicas", randomFrom("0-all", "0-1")).build());
+        indexRandomData("index");
 
-        var assertion = new BackgroundAssertion(() -> assertIndexSetting("index", "index.number_of_replicas", "1"));
+        ensureGreen("index");
+        assertIndexSetting("index", "index.number_of_replicas", "1");
 
         var nodeNameToReplace = randomFrom(node1, node2);
         var nodeIdToReplace = getNodeId(nodeNameToReplace);
         var replacementNodeName = "node_t2";
 
         putNodeShutdown(nodeIdToReplace, SingleNodeShutdownMetadata.Type.REPLACE, replacementNodeName);
+        // registering node shutdown entry does not perform reroute, neither should it.
+        // we provoke it here in the test to ensure that auto-expansion has run.
+        updateIndexSettings(Settings.builder().put("index.routing.allocation.exclude.name", "non-existent"), "index");
+
+        ensureGreen("index");
+        assertIndexSetting("index", "index.number_of_replicas", "1");
 
         var nodeName3 = internalCluster().startNode();
         assertThat("started node name did not match registered replacement", nodeName3, equalTo(replacementNodeName));
 
         ensureGreen("index");
-        assertNodeShutdownStatus(nodeIdToReplace, COMPLETE);
+        assertIndexSetting("index", "index.number_of_replicas", "1");
 
+        assertBusy(() -> assertNodeShutdownStatus(nodeIdToReplace, COMPLETE));
         internalCluster().stopNode(nodeNameToReplace);
-        assertion.verify();
+
+        ensureGreen("index");
+        assertIndexSetting("index", "index.number_of_replicas", "1");
     }
 
     public void testNodeShutdownWithUnassignedShards() throws Exception {
@@ -511,27 +518,5 @@ public class NodeShutdownShardsIT extends ESIntegTestCase {
     private void assertIndexSetting(String index, String setting, String expectedValue) {
         var response = client().admin().indices().prepareGetSettings(index).get();
         assertThat(response.getSetting(index, setting), equalTo(expectedValue));
-    }
-
-    private static class BackgroundAssertion extends Thread {
-
-        private final Runnable assertion;
-        private final AtomicBoolean stopped = new AtomicBoolean(false);
-
-        BackgroundAssertion(Runnable assertion) {
-            this.assertion = assertion;
-            start();
-        }
-
-        @Override
-        public void run() {
-            while (stopped.get() == false) {
-                assertion.run();
-            }
-        }
-
-        public void verify() {
-            stopped.set(true);
-        }
     }
 }
